--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <footer>
         <h2 style="margin: 0">&copy Felipe Marques, 2019.</h2>
+
         <p style="margin: 12px" <br> 20 anos, estudante de ciência da computação, aspirante a desenvolvedor,
             <br>apaixonado por música e arte. Atualmente estudando HTML/CSS/JS e JAVA.
             <br><br><b>Contato:</b><br>
@@ -48,12 +49,9 @@
             </a>
             <a href="#" id="wpp_link"><i class="fab fa-whatsapp fa-3x" target="_blank"></i></a>
             <a href="https://www.facebook.com/QuinnCansada" id="fb_link"><i class="fab fa-facebook fa-3x" target="_blank"rel="noopener"></i></a>
-            <a href="https://www.instagram.com/lipe.makaveli/" id="ig_link" target="_blank"><i class="fab fa-instagram fa-3x"rel="noopener"></i></a>
-
+            <a href="https://www.instagram.com/the.hendrixx/" id="ig_link" target="_blank"><i class="fab fa-instagram fa-3x"rel="noopener"></i></a>
     </footer>
 
-
 </body>
-
 
 </html>
