--- a/toDo.html
+++ b/toDo.html
@@ -5,50 +5,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name=”description” content='Horário'>
-    <title>Que horas são</title>
-
-    <link rel="stylesheet" href="css/Style.css">
+    <link rel="stylesheet" href="css/Style_todo.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <script src="script/Animations.js"></script>
-    <script src="script/InitClock_Bg_Index.js"></script>
+    <script src="script/InitBackground.js"></script>
+    <title>Todo</title>
+
 </head>
 
-<body onload="init(), fadeIn('title_page_index', 400, 3), fadeIn('box1', 1200, 3), fadeIn('left_navbar_item1', 2000, 2), fadeIn('left_navbar_item2', 2050, 2), fadeIn('left_navbar_item3', 2100, 2)">
-
-    <div id="title_page_index"> Que horas são?</div>
+<body onload="init()">
+    <div id="title_page_default"> Post-it online</div>
 
     <section class="container" id="left_navbar">
-        <ul id="navbar_index">
-            <a class="navbar_link" href="/toDo.html">
-                <li class="left_navbar_item_i" id="left_navbar_item1">Post-its</li>
+        <ul id="navbar_default">
+
+            <a class="navbar_link" href="/index.html">
+                <li class="left_navbar_item" id="left_navbar_item1">Voltar</li>
             </a>
             <a class="navbar_link" href="#">
-                <li class="left_navbar_item_i" id="left_navbar_item2">B</li>
+                <li class="left_navbar_item" id="left_navbar_item2">B</li>
             </a>
             <a class="navbar_link" href="#">
-                <li class="left_navbar_item_i" id="left_navbar_item3">C</li>
+                <li class="left_navbar_item" id="left_navbar_item3">C</li>
             </a>
         </ul>
     </section>
 
-    <section class="container" id="center_container">
-        <div class="box" id="box1">
-            <div id="horas" class="txt"></div>
-            <div id="box1img">
-                <img id="img" src="image/white.jpg" alt="">
-            </div>
-            <div id="box1txt" class="txt">
-                "Não há lugar para a sabedoria onde não há paciência" <i> Santo Agostinho</i>
+    <section id=postits_container>
+
+        <div class="box_default" id="postits_box">
+            <p style="margin-top: 0;">Adicione anotações para se lembrar mais tarde</p>
+            <div id="add_postit">
+                NOME: <input class="postit_input" name="postit_name" id="postit_name" type="text">
+                <br> CONTEUDO:
+                <input class="postit_input" name="postit_content" id="postit_content" type="text">
+                <button type="button" id="btn_adicionar">ADICIONAR</button>
+                <button type="button" id="btn_mostrar">MOSTRAR</button>
             </div>
         </div>
-
     </section>
 
     <footer>
-        <h2 style="margin: 0">&copy Felipe Marques, 2019.</h2>
+        <h2 style="margin: 0 ">&copy Felipe Marques, 2019.</h2>
 
-        <p style="margin: 12px" <br> 20 anos, estudante de ciência da computação, aspirante a desenvolvedor,
+        <p style="margin: 12px " <br> 20 anos, estudante de ciência da computação, aspirante a desenvolvedor,
             <br>apaixonado por música e arte. Atualmente estudando HTML/CSS/JS e JAVA.
             <br><br><b>Contato:</b><br>
             <a href="https://github.com/felipecolor9" id="git_link" class="social_media_link" target="_blank" rel="noopener"><i class=" fab fa-github fa-3x " "></i>
@@ -58,6 +58,7 @@
             <a href="https://www.instagram.com/the.hendrixx/" id="ig_link" target="_blank"><i class="fab fa-instagram fa-3x"rel="noopener"></i></a>
     </footer>
 
+    <script src="script/todo_object.js"></script>
 </body>
 
 </html>
