--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <div id="title_page_index"> Que horas são?</div>
 
     <section class="container" id="left_navbar">
-        <ul id="navbar_index">
+        <ul id="navbar">
             <a class="navbar_link" href="/toDo.html">
                 <li class="left_navbar_item_i" id="left_navbar_item1">Post-its</li>
             </a>
-            <a class="navbar_link" href="#">
-                <li class="left_navbar_item_i" id="left_navbar_item2">B</li>
+            <a class="navbar_link" href="/users.html">
+                <li class="left_navbar_item_i" id="left_navbar_item2">Usuários</li>
             </a>
-            <a class="navbar_link" href="#">
-                <li class="left_navbar_item_i" id="left_navbar_item3">C</li>
+            <a class="navbar_link" href="/reminder.html">
+                <li class="left_navbar_item_i" id="left_navbar_item3">Lembretes</li>
             </a>
         </ul>
     </section>
